[project]
name = "mattermostai"
version = "0.1.0"
description = ""
authors = [
    {name = "IliaPr",email = "ilya.prianichnikov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "uvicorn (>=0.49.0,<0.50.0)",
    "fastapi (>=0.138.1,<0.139.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "litellm[proxy] (>=1.90.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
